--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -25,7 +25,7 @@ $on-laptop: 800px !default;
 $on-medium: $on-palm !default;
 $on-large: $on-laptop !default;
 
-$portfolio-block-size: 256px !default;
+$portfolio-block-size: 300px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
